CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT (TEST)
SET(CMAKE_C_FLAGS "-g -O3 -Wall" )
SET(SRC_LIST bam_draw_0.0.5.c)
MESSAGE(STATUS "This is BINARY dir " ${TEST_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${TEST_SOURCE_DIR})

FIND_PROGRAM(CMAKE_PKGCONFIG_EXECUTABLE pkg-config)

INCLUDE_DIRECTORIES(/share/software/software/zlib_1.2.8_install/include /home/xuxiong/work/c/samtools-0.1.19 /home/xuxiong/work/c)
LINK_DIRECTORIES(/share/software/software/zlib_1.2.8_install/lib /home/xuxiong/work/c/samtools-0.1.19 /home/xuxiong/work/c)
ADD_EXECUTABLE(bam_draw_0_0_5_cmake ${SRC_LIST})
TARGET_LINK_LIBRARIES(bam_draw_0_0_5_cmake pthread z libbam.a libhashtbl.a)

IF(CMAKE_PKGCONFIG_EXECUTABLE)
	MARK_AS_ADVANCED(CMAKE_PKGCONFIG_EXECUTABLE)
	FIND_PACKAGE(PkgConfig REQUIRED)
	SET(LIBRARY "cairo")
	PKG_CHECK_MODULES(LIBCAIRO REQUIRED ${LIBRARY})
	INCLUDE_DIRECTORIES(${LIBCAIRO_INCLUDE_DIRS})
	LINK_DIRECTORIES(${LIBCAIRO_LIBRARY_DIRS})
	TARGET_LINK_LIBRARIES(bam_draw_0_0_5_cmake ${LIBCAIRO_LIBRARIES})
ENDIF(CMAKE_PKGCONFIG_EXECUTABLE)
